refactor to eliminate code duplication, added css file - Jamie

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="build/timeline.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="timeline.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
