--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>D3 Prototyping</title>
     <!--<link href="css/timeline.css" rel="stylesheet" type="text/css"/>-->
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="build/timeline.js"></script>
+    <script src="build/wlp-timeline.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css"/>
-    <link href="build/timeline.css" rel="stylesheet" type="text/css"/>
+    <link href="build/wlp-timeline.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -20,14 +20,14 @@
        return new Date(start.getTime() + Math.random() * (end.getTime() - start.getTime()));
     }
 
-    timeline.drawTimeline("#rootdiv", 900);
+    wlp_timeline.drawTimeline("#rootdiv", 900);
 
     var dates = [];
     for(var i=0; i<10; i++) {
         dates.push(randomDate(new Date(2016, 0, 1), new Date()));
     }
 
-    timeline.addData(dates);
+    wlp_timeline.addData(dates);
 
 </script>
 
