closes #16 - added simple tooltip to display timestamp - Jamie

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>D3 Prototyping</title>
     <!--<link href="css/timeline.css" rel="stylesheet" type="text/css"/>-->
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     <script src="build/wlp-timeline.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <link href="build/wlp-timeline.css" rel="stylesheet" type="text/css"/>
