minor refactoring to use const and let and clean up use of global vars in file; still needs more work - Jamie

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
     wlp_timeline.addData(dates);
 
+//    window.onresize = function() {
+//        wlp_timeline.resizeTimeline(400);
+//    }
+
 
 </script>
 
