closes #13 - a preliminary working version of automatically aggregating dates into bins based on zoom level - Jamie

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         dates = dates.map(function(d) {
             return new Date(d["datetime"]);
         });
-        wlp_timeline.addDataHistogram(dates);
+        wlp_timeline.addData(dates);
     });
 
     //    window.onresize = function() {
