--- a/example/index.html
+++ b/example/index.html
@@ -2,30 +2,8 @@
 <html>
 <head>
 	<title>wlp-timeline</title>
-    <style type="text/css">
-
-		.zoom {
-            cursor: move;
-		    fill: none;
-		    pointer-events: all;
-            fill: white;
-            fill-opacity: 0;
-            stroke: #ddd;
-            stroke-width: 3;
-		}
-
-        .axis--x text {
-            fill: #aaa;
-        }
-        .axis--x path,
-        .axis--x line {
-            fill: none;
-            stroke-width: 1;
-            stroke: #ddd;
-        }
-
-	</style>
     <script type="text/javascript" src="./build/wlp-timeline.js"></script>
+    <link href="build/wlp-timeline.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <svg width="1000" height="200"></svg>
