closes #32 - made timeline height adjustable paramter - Jamie

--- a/example/index.html
+++ b/example/index.html
@@ -59,20 +59,11 @@
         },
         'data': data2
     };
-    const feed3 = {
-        'feedInfo': {
-            'feedId': 'steps3',
-            'measurementLabel': 'Steps',
-            'measurementTimespan': 1
-        },
-        'data': data1
-    };
 
-    wlp_timeline.makeTimeline("#rootdiv", 800);
+    wlp_timeline.makeTimeline("#rootdiv", 600, 111);
 
     wlp_timeline.addFeed(feed1);
     wlp_timeline.addFeed(feed2);
-    wlp_timeline.addFeed(feed3);
 
 </script>
 
