--- a/example/index.html
+++ b/example/index.html
@@ -26,7 +26,7 @@
 
 <script type="text/javascript">
 
-    wlp_timeline.makeTimeline("#rootdiv", 600, 300);
+    wlp_timeline.makeTimeline("#rootdiv", 650, 250);
 
     const weightData = [];
     const caloriesData = [];
@@ -40,7 +40,7 @@
                 let d = new Date(startDate1.getTime() + i*3600*24*1000);
                 weightData.push(
                     {'timestamp': new Date(d.toDateString()),
-                    'measurementValue': (Math.sin(i/10.0 + 2*Math.random())**2)}
+                    'measurementValue': 200*(Math.sin(i/10.0 + 2*Math.random())**2)}
                 );
             }
             const startDate2 = new Date(2016, 3, 6);
@@ -48,7 +48,7 @@
                 let d = new Date(startDate2.getTime() + i*3600*24*1000);
                 caloriesData.push(
                     {'timestamp': new Date(d.toDateString()),
-                    'measurementValue': (Math.sin(i/10.0 + 2*Math.random())**2)}
+                    'measurementValue': 3000*(Math.sin(i/10.0 + 2*Math.random())**2)}
                 );
             }
             const startDate3 = new Date(2014, 1, 22);
@@ -56,7 +56,7 @@
                 let d = new Date(startDate3.getTime() + i*3600*24*1000);
                 stepsData.push(
                     {'timestamp': new Date(d.toDateString()),
-                    'measurementValue': (Math.sin(i/10.0 + 2*Math.random())**2)}
+                    'measurementValue': 30000*(Math.sin(i/10.0 + 2*Math.random())**2)}
                 );
             }
         } else {
@@ -68,15 +68,15 @@
         }
 
         wlp_timeline.addFeed({
-            'feedInfo': {'feedId': 'steps', 'measurementLabel': 'Steps', 'measurementTimespan': 1},
+            'feedInfo': {'feedId': 'steps', 'measurementLabel': 'Steps', 'measurementTimespan': 1, 'measurementMinimum': 0},
             'data': stepsData
         });
         wlp_timeline.addFeed({
-            'feedInfo': {'feedId': 'calories', 'measurementLabel': 'Calories', 'measurementTimespan': 1},
+            'feedInfo': {'feedId': 'calories', 'measurementLabel': 'Calories', 'measurementTimespan': 1, 'measurementMinimum': 0},
             'data': caloriesData
         });
         wlp_timeline.addFeed({
-            'feedInfo': {'feedId': 'weight', 'measurementLabel': 'Weight', 'measurementTimespan': 1},
+            'feedInfo': {'feedId': 'weight', 'measurementLabel': 'Weight', 'measurementTimespan': 1, 'measurementMinimum': 155},
             'data': weightData
         });
 
