--- a/example/index.html
+++ b/example/index.html
@@ -26,7 +26,7 @@
 
 <script type="text/javascript">
 
-    wlp_timeline.makeTimeline("#rootdiv", 800, 500);
+    wlp_timeline.makeTimeline("#rootdiv", 800, 500, feed=>{});
 
     const weightData = [];
     const caloriesData = [];
